@@ -368,31 +368,193 @@ MagickExport unsigned int AnnotateImage(Image *image,const DrawInfo *draw_info)
 %                                                                             %
 %                                                                             %
 %                                                                             %
-%   C o n v e r t T e x t T o U n i c o d e                                   %
+%   E n c o d e S J I S                                                       %
 %                                                                             %
 %                                                                             %
 %                                                                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  Method ConvertTextToUnicode converts an ASCII text string to Unicode and
-%  returns the Unicode translation and the character count.  Normal characters
-%  are just copied.
+%  EncodeSJIS() converts an ASCII text string to 2-bytes per character
+%  code (like UCS-2).  Returns the translated codes and the character
+%  count.  Characters under 0x7f are just copied, characters over 0x80 are
+%  tied with the next character.
 %
-%  The format of the ConvertTextToUnicode function is:
+%  Method contributed by Katsutoshi Shibuya.
 %
-%      unicode=ConvertTextToUnicode(text,count)
+%  The format of the EncodeSJIS function is:
+%
+%      encoding=EncodeSJIS(text,count)
 %
 %  A description of each parameter follows:
 %
-%    o unicode:  Method ConvertTextToUnicode returns a pointer to an
-%      unsigned short array representing the Unicode translation of the
-%      ASCII string.
+%    o encoding:  EncodeSJIS() returns a pointer to an unsigned short
+%      array representing the encoded version of the ASCII string.
 %
-%    o text: Specifies a pointer to a character array that contains the
-%      text to convert.
+%    o text: The text.
 %
-%    o count: The number of characters that were translated from ASCII to
-%      Unicode is returned in this unsigned integer pointer.
+%    o count: return the number of characters generated by the encoding.
+%
+%
+*/
+
+static int GetOneCharacter(const unsigned char *text,size_t *length)
+{
+  unsigned int
+    c;
+
+  if (*length < 1)
+    return(-1);
+  c=text[0];
+  if (!(c & 0x80))
+    {
+      *length=1;
+      return(c);
+    }
+  if (*length < 2)
+    {
+      *length=0;
+      return(-1);
+    }
+  *length=2;
+  c=((int) (text[0]) << 8);
+  c|=text[1];
+  return(c);
+}
+
+static unsigned short *EncodeSJIS(const char *text,size_t *count)
+{
+  int
+    c;
+
+  register int
+    i;
+
+  register const char
+    *p;
+
+  register unsigned short
+    *q;
+
+  size_t
+    length;
+
+  unsigned short
+    *encoding;
+
+  *count=0;
+  if ((text == (char *) NULL) || (*text == '\0'))
+    return((unsigned short *) NULL);
+  encoding=(unsigned short *)
+    AcquireMemory((strlen(text)+MaxTextExtent)*sizeof(unsigned short));
+  if (encoding == (unsigned short *) NULL)
+    MagickError(ResourceLimitError,"Unable to convert text to Textcode",
+      "Memory allocation failed");
+  q=encoding;
+  for (p=text; *p != '\0'; p+=length)
+  {
+    length=strlen(p);
+    c=GetOneCharacter((const unsigned char *) p,&length);
+    if (c < 0)
+      {
+        *count=strlen(text);
+        for (i=0; i < (long) *count; i++)
+          encoding[i]=(unsigned char) text[i];
+        return(encoding);
+      }
+    *q=(unsigned short) c;
+    q++;
+  }
+  *count=q-encoding;
+  return(encoding);
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%   E n c o d e T e x t                                                       %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  EncodeText() converts an ASCII text string to 2-bytes per character
+%  code (like UCS-2) for the font's character code.  Returns the
+%  translated codes and the character count.  All characters are just
+%  copied, expanding char to unsigned short.
+%
+%  The format of the EncodeText function is:
+%
+%      encoding=EncodeText(text,count)
+%
+%  A description of each parameter follows:
+%
+%    o encoding:  EncodeText() returns a pointer to an unsigned short
+%      array representing the encoded version of the ASCII string.
+%
+%    o text: The text.
+%
+%    o count: return the number of characters generated by the encoding.
+%
+%
+*/
+static unsigned short *EncodeText(const char *text,size_t *count)
+{
+  register const char
+    *p;
+
+  register unsigned short
+    *q;
+
+  unsigned short
+    *encoding;
+
+  *count=0;
+  if ((text == (char *) NULL) || (*text == '\0'))
+    return((unsigned short *) NULL);
+  encoding=(unsigned short *)
+    AcquireMemory((strlen(text)+MaxTextExtent)*sizeof(unsigned short));
+  if (encoding == (unsigned short *) NULL)
+    MagickError(ResourceLimitError,"Unable to convert text to Textcode",
+      "Memory allocation failed");
+  q=encoding;
+  for (p=text; *p != '\0'; p++)
+  {
+    *q=(unsigned short) *p;
+    q++;
+  }
+  *count=q-encoding;
+  return(encoding);
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%   E n c o d e U n i c o d e                                                 %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  EncodeUnicode() converts an ASCII text string to Unicode and returns
+%  the Unicode translation and the character count.  Normal characters are
+%  just copied.
+%
+%  The format of the EncodeUnicode function is:
+%
+%      unicode=EncodeUnicode(text,count)
+%
+%  A description of each parameter follows:
+%
+%    o unicode:  EncodeUnicode() returns a pointer to an unsigned short array
+%      array representing the encoded version of the ASCII string.
+%
+%    o text: The text.
+%
+%    o count: return the number of characters generated by the encoding.
 %
 %
 */
@@ -448,7 +610,7 @@ static int GetUnicodeCharacter(const unsigned char *text,size_t *length)
   return(c);
 }
 
-static unsigned short *ConvertTextToUnicode(const char *text,size_t *count)
+static unsigned short *EncodeUnicode(const char *text,size_t *count)
 {
   int
     c;
@@ -1035,6 +1197,9 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
   FT_BitmapGlyph
     bitmap;
 
+  FT_Encoding
+    encoding_type;
+
   FT_Error
     status;
 
@@ -1090,15 +1255,14 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
       (FT_Outline_LineTo_Func) TraceLineTo,
       (FT_Outline_ConicTo_Func) TraceQuadraticBezier,
       (FT_Outline_CubicTo_Func) TraceCubicBezier,
-      0,
-      0
+      0, 0
     };
 
   unsigned int
     active;
 
   unsigned short
-    *unicode;
+    *encoding;
 
   /*
     Initialize Truetype library.
@@ -1112,35 +1276,40 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
     {
       (void) FT_Done_FreeType(library);
       ThrowBinaryException(DelegateWarning,"Unable to read font",
-        draw_info->font)
+        draw_info->font);
     }
   (void) strncpy(font,draw_info->font,MaxTextExtent-1);
+  encoding_type=ft_encoding_none;
   if (draw_info->encoding != (char *) NULL)
     {
       if (LocaleCompare(draw_info->encoding,"AdobeCustom") == 0)
-        FT_Select_Charmap(face,ft_encoding_adobe_custom);
+        encoding_type=ft_encoding_adobe_custom;
       if (LocaleCompare(draw_info->encoding,"AdobeExpert") == 0)
-        FT_Select_Charmap(face,ft_encoding_adobe_expert);
+        encoding_type=ft_encoding_adobe_expert;
       if (LocaleCompare(draw_info->encoding,"AdobeStandard") == 0)
-        FT_Select_Charmap(face,ft_encoding_adobe_standard);
+        encoding_type=ft_encoding_adobe_standard;
       if (LocaleCompare(draw_info->encoding,"AppleRoman") == 0)
-        FT_Select_Charmap(face,ft_encoding_apple_roman);
+        encoding_type=ft_encoding_apple_roman;
       if (LocaleCompare(draw_info->encoding,"BIG5") == 0)
-        FT_Select_Charmap(face,ft_encoding_big5);
+        encoding_type=ft_encoding_big5;
       if (LocaleCompare(draw_info->encoding,"GB2312") == 0)
-        FT_Select_Charmap(face,ft_encoding_gb2312);
+        encoding_type=ft_encoding_gb2312;
       if (LocaleCompare(draw_info->encoding,"Latin 2") == 0)
-        FT_Select_Charmap(face,ft_encoding_latin_2);
+        encoding_type=ft_encoding_latin_2;
       if (LocaleCompare(draw_info->encoding,"None") == 0)
-        FT_Select_Charmap(face,ft_encoding_none);
-      if (LocaleCompare(draw_info->encoding,"SJIS") == 0)
-        FT_Select_Charmap(face,ft_encoding_sjis);
+        encoding_type=ft_encoding_none;
+      if (LocaleCompare(draw_info->encoding,"SJIScode") == 0)
+        encoding_type=ft_encoding_sjis;
       if (LocaleCompare(draw_info->encoding,"Symbol") == 0)
-        FT_Select_Charmap(face,ft_encoding_symbol);
+        encoding_type=ft_encoding_symbol;
       if (LocaleCompare(draw_info->encoding,"Unicode") == 0)
-        FT_Select_Charmap(face,ft_encoding_unicode);
+        encoding_type=ft_encoding_unicode;
       if (LocaleCompare(draw_info->encoding,"Wansung") == 0)
-        FT_Select_Charmap(face,ft_encoding_wansung);
+        encoding_type=ft_encoding_wansung;
+      status=FT_Select_Charmap(face,encoding_type);
+      if (status)
+        ThrowBinaryException(DelegateWarning,"Unrecognized encoding",
+          draw_info->encoding);
     }
   /*
     Set text size.
@@ -1170,10 +1339,27 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
   metrics->underline_position=face->underline_position/64.0;
   metrics->underline_thickness=face->underline_thickness/64.0;
   /*
-    Convert to Unicode.
+    Convert text to 2-byte format as prescribed by the encoding.
   */
-  unicode=ConvertTextToUnicode(draw_info->text,&length);
-  if (unicode == (unsigned short *) NULL)
+  switch (encoding_type)
+  {
+    case ft_encoding_unicode:
+    {
+      encoding=EncodeUnicode(draw_info->text,&length);
+      break;
+    }
+    case ft_encoding_sjis:
+    {
+      encoding=EncodeSJIS(draw_info->text,&length);
+      break;
+    }
+    default:
+    {
+      encoding=EncodeText(draw_info->text,&length);
+      break;
+    }
+  }
+  if (encoding == (unsigned short *) NULL)
     {
       (void) FT_Done_Face(face);
       (void) FT_Done_FreeType(library);
@@ -1197,7 +1383,7 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
   pattern=draw_info->fill_pattern;
   for (i=0; i < (long) length; i++)
   {
-    glyph.id=FT_Get_Char_Index(face,unicode[i]);
+    glyph.id=FT_Get_Char_Index(face,encoding[i]);
     if ((glyph.id != 0) && (last_glyph.id != 0) && FT_HAS_KERNING(face))
       {
         FT_Vector
@@ -1334,7 +1520,7 @@ static unsigned int RenderTruetype(Image *image,const DrawInfo *draw_info,
   /*
     Free resources.
   */
-  LiberateMemory((void **) &unicode);
+  LiberateMemory((void **) &encoding);
   DestroyDrawInfo(clone_info);
   (void) FT_Done_Face(face);
   (void) FT_Done_FreeType(library);
